@@ -57,6 +57,9 @@ $labels['sender'] = 'Sender';
 $labels['recipient'] = 'Recipient';
 $labels['vacationaddresses'] = 'My additional e-mail addresse(s) (comma-separated):';
 $labels['vacationdays'] = 'How often send messages (in days):';
+$labels['vacationinterval'] = 'How often send messages:';
+$labels['days'] = 'days';
+$labels['seconds'] = 'seconds';
 $labels['vacationreason'] = 'Message body (vacation reason):';
 $labels['vacationsubject'] = 'Message subject:';
 $labels['rulestop'] = 'Stop evaluating rules';
