@@ -1,3 +1,5 @@
+- Add vacation-seconds extension support (RFC 6131)
+
 * version 6.2 [2013-02-17]
 -----------------------------------------------------------
 - Support tls:// prefix in managesieve_host option
